# django-with-fastapi

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  test_endpoints.py
api/: main.py  models.py  services.py
api/migrations/: 0001_initial.py
core/: asgi.py  settings.py
